# Copyright © 2025-2026 Wenze Wei. All Rights Reserved.
#
# This file is part of DMSC.
# The DMSC project belongs to the Dunimd Team.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# You may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "dmsc"
version = "0.1.3"
description = "Dunimd Middleware Service - A high-performance Rust middleware framework with modular architecture"
readme = "README.md"
authors = [{ name = "Dunimd Team" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.8"
keywords = ["middleware", "rust", "async", "gateway", "service-mesh"]
repository = "https://gitee.com/dunimd/dmsc"

[tool.maturin]
python-source = "python"
features = ["pyo3", "auth", "cache", "queue", "gateway", "observability"]

[tool.maturin.dependencies]
pyo3 = "^0.27"
